Refactor and add swagger information
