# api/dice.go
@@ -1,4 +1,4 @@
-package main
+package api
 
 import (
 	"encoding/xml"
@@ -7,11 +7,19 @@ import (
 	"strconv"
 
 	"github.com/gorilla/mux"
+	"utile.space/api/utils"
 )
 
+//	@Summary		Roll a dice
+//	@Description	Endpoint to roll a dice of the given number of faces
+//	@Tags			dice
+//	@Produce		json,xml,application/yaml,plain
+//	@Param			dice	path		int	true	"Number of faces of the dice between 2 and 100"
+//	@Success		200		{object}	DieResult
+//	@Router			/d{dice} [get]
 func RollDice(w http.ResponseWriter, r *http.Request) {
 
-	enableCors(&w)
+	utils.EnableCors(&w)
 
 	dice, err := strconv.Atoi(mux.Vars(r)["dice"])
 
@@ -24,7 +32,7 @@ func RollDice(w http.ResponseWriter, r *http.Request) {
 	roll.Die = dice
 	roll.Result = rand.Intn(dice) + 1
 
-	output(w, r.Header["Accept"], roll, strconv.Itoa(roll.Result))
+	utils.Output(w, r.Header["Accept"], roll, strconv.Itoa(roll.Result))
 }
 
 type DieResult struct {
